welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:21: error: type mismatch;
 found   : Unit
 required: Boolean
		if (estFaceMur()) {
                ^